--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@highlightjs/vue-plugin": "^2.1.0",
+    "highlight.js": "^11.7.0",
+    "random": "^4.1.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
