--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babylonjs/core": "^5.51.0",
     "@highlightjs/vue-plugin": "^2.1.0",
     "highlight.js": "^11.7.0",
     "mathlive": "^0.89.4",
