--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@babylonjs/core": "^5.51.0",
     "@highlightjs/vue-plugin": "^2.1.0",
     "highlight.js": "^11.7.0",
-    "mathlive": "^0.89.4",
+    "mathjax": "^3.2.2",
     "random": "^4.1.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
