--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@highlightjs/vue-plugin": "^2.1.0",
     "highlight.js": "^11.7.0",
     "mathjax": "^3.2.2",
+    "mathlive": "^0.90.4",
     "random": "^4.1.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
