--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@babylonjs/core": "^5.51.0",
     "@highlightjs/vue-plugin": "^2.1.0",
     "highlight.js": "^11.7.0",
-    "mathjax": "^3.2.2",
-    "mathlive": "^0.90.4",
+    "katex": "^0.16.4",
+    "mathlive": "^0.90.7",
     "random": "^4.1.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
