--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "browserslist": ["last 2 Firefox versions"]
 }
