--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "html-react-parser": "^3.0.16",
     "katex": "^0.16.6",
     "next": "13.3.0",
     "react": "18.2.0",
@@ -22,5 +23,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {},
-  "browserslist": ["last 2 Firefox versions"]
+  "browserslist": [
+    "last 2 Firefox versions"
+  ]
 }
