--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fontsource/jetbrains-mono": "^4.5.12",
+    "@fontsource/noto-sans-mono": "^4.5.13",
     "katex": "^0.16.7",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
